# mempalace

./: .gitignore  entry_point.py  pyproject.toml
docs/: server-lifecycle.md
mempalace/: __main__.py  backup.py  cli.py  client.py  config.py  knowledge_graph.py  lifecycle.py  miner.py  room_detector_local.py  searcher.py  server.py  watcher.py
scripts/: build-binary.sh  install.sh
