[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mempalace"
version = "3.0.0"
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
 authors = [
     {name = "Jasonzhangf"},
 ]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "webdavclient3>=3.0",
]

 [project.urls]
 Homepage = "https://github.com/Jasonzhangf/mempalace"
 Repository = "https://github.com/Jasonzhangf/mempalace"
 "Bug Tracker" = "https://github.com/Jasonzhangf/mempalace/issues"

[tool.setuptools.packages.find]
include = ["mempalace*"]

[project.scripts]
mempalace = "mempalace:main"

[project.optional-dependencies]
binary = ["pyinstaller>=6.0"]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
